--- a/index.html
+++ b/index.html
@@ -7,22 +7,22 @@
 <meta name="title" content="Amenábar + Pizarro">
 <title>IAmenábar|SPizarro</title> <!--Ahí se cambia el nombre de la ventana de internet -->
 <!-- Search Engine -->
-<meta name="description" content="cambiar"> <!-- solo cambiar lo que dice cambiar-->
+<meta name="description" content="Portafolio de proyectos UC y otros."> <!-- solo cambiar lo que dice cambiar-->
 <meta name="image" content="cambiar por una URL, debes poner la imagen en línea">
 <!-- Schema.org for Google -->
-<meta itemprop="name" content="cambiar">
-<meta itemprop="description" content="cambiar">
+<meta itemprop="name" content="IAmenábar|SPizarro">
+<meta itemprop="description" content="Portafolio de proyectos UC y otros.">
 <meta itemprop="image" content="cambiar por una URL, deben poner la imagen en línea">
 <!-- Twitter -->
 <meta name="twitter:card" content="summary"> <!-- no cambiar este-->
-<meta name="twitter:title" content="cambiar">
-<meta name="twitter:description" content="cambiar">
+<meta name="twitter:title" content="IAmenábar|SPizarro">
+<meta name="twitter:description" content="Portafolio de proyectos UC y otros.">
 <!-- Open Graph general (Facebook, Pinterest & Google+) -->
-<meta name="og:title" content="cambiar">
-<meta name="og:description" content="cambiar">
-<meta name="og:image" content="cambiar">
+<meta name="og:title" content="IAmenábar|SPizarro">
+<meta name="og:description" content="Portafolio de proyectos UC y otros.">
+<meta name="og:image" content="cambiar por URL">
 <meta name="og:url" content="cambiar">
-<meta name="og:site_name" content="cambiar">
+<meta name="og:site_name" content="IAmenábar|SPizarro">
 <meta name="og:locale" content="es_CL">
 <meta name="og:type" content="website">
 <!--ahora vinculamos los estilos-->
@@ -150,7 +150,7 @@
 <video autoplay loop preload="auto" poster="media/video.jpg"> <!-- hay que poner en jpg una imagen inicial del video-->
 	<source src="media/video.webm" type="video/webm"> <!--si el nombre del video no es "video" habria que cambiarlo acá, asíque mejor que se llame "video"-->
 	<source src="media/video.mp4" type="video/mp4">
-	<p>Tu navegador no soporta el elemento, actualízate.</p> <!-- esta frase se le pone a alguien que no se le abra el video, dejar así o a lo mejor cambiarla por algo parecido-->
+	<p>Tu navegador no soporta el elemento, actualízate po'.</p> <!-- esta frase se le pone a alguien que no se le abra el video, dejar así o a lo mejor cambiarla por algo parecido-->
 </video> <!--el video se tiene que llamar "video".usar programa mirovideoconverter.com, y transformar el video como webm y mp4 que son los que se usan-->
 <h3>QUIENES SOMOS</h3>
 <div id="somos"> <!--identidad:somos, es la división de quienes somos, hay clases, una para cada una de nosotras-->
@@ -216,7 +216,7 @@
 	  	<p>Pegamento conductor de electricidad para unir circuitos. Proyecto Colectivo</p>
 	</div><!--/item-->
 <div class="item">
-	<figure><img src="media/foto-09.png"/></figure>
+	<figure><img src="media/foto-09.jpg"/></figure>
 		<h4>Sin Título</h4>
 		<p>Ilustración digital. I.Amenábar</p>
 	</div><!--/item-->
@@ -231,12 +231,12 @@
 		<p>Tótem que estimula la alimentación en altura para los papiones del Zoológico Metropolitano. Taller Interacción. Proyecto Colectivo.</p>
 	</div><!--/item-->
 	<div class="item">
-	<figure><img src="media/foto-12.png"/></figure>
+	<figure><img src="media/foto-12.jpg"/></figure>
 		<h4>Auto Cóndor</h4>
 		<p>Auto de madera (pino y coihue). Taller Introducción al Proyecto. S.Pizarro</p>
 </div><!--/item-->
 <div class="item">
-<figure><img src="media/foto-13.png"/></figure>
+<figure><img src="media/foto-13.jpg"/></figure>
 	<h4>SOIE</h4>
 	<p>Packaging e identidad de marca para helado. Taller Producto. Proyecto Colectivo </p>
 </div><!--/item-->
