nuevo estilo e index

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <meta name="og:locale" content="es_CL">
 <meta name="og:type" content="website">
 <!--ahora vinculamos los estilos-->
-<link href="https://fonts.googleapis.com/css?family=Abel|Francois+One" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Francois+One|Roboto+Condensed" rel="stylesheet">
 <link rel="stylesheet" href="estilo.css" type="text/css">
 </head>
 <body>
@@ -145,7 +145,7 @@
 
 
 <h1>IAmenábar|SPizarro</h1>
-<h2>Holi ponis como están?</h2> <!-- este es el slogan-->
+<h2>Diseñando desde 1996</h2> <!-- este es el slogan-->
 </header>
 <video autoplay loop preload="auto" poster="media/video.jpg"> <!-- hay que poner en jpg una imagen inicial del video-->
 	<source src="media/video.webm" type="video/webm"> <!--si el nombre del video no es "video" habria que cambiarlo acá, asíque mejor que se llame "video"-->
@@ -156,14 +156,14 @@
 <div id="somos"> <!--identidad:somos, es la división de quienes somos, hay clases, una para cada una de nosotras-->
 	<div class="dupla primera">
 		<h4>ISIDORA AMENÁBAR</h4>
-		<h5>Antes muerta que sencilla</h5>
-		<p>21 años. Estudiante de Diseño UC, cursando Calidad II.</p>
+		<h5>El diseño es un lenguaje y lo principal es cómo usas ese lenguaje</h5>
+		<p>21 años. Leo. Estudiante de Diseño UC, cursando Taller Calidad II.</p>
 		<address><a href="mailto:imamenabar@uc.cl">imamenabar@uc.cl</a></address> <!-- al poner mailto:xxx al apretar hacer que se abra el correo del computador con unm mail hacia ese correo-->
 	</div><!--/dupla primera-->
 	<div class="dupla segunda">
 		<h4>SOFÍA PIZARRO</h4>
-		<h5>Mi cuerpo dice quiero, pero mi alma tiene miedo</h5>
-		<p>21 años. Estudiante de Diseño UC, cursando Calidad II.</p>
+		<h5>Un buen diseño puede soportar la moda de 10 años</h5>
+		<p>21 años. Escorpión. Estudiante de Diseño UC, cursando Taller Calidad II.</p>
 		<address><a href="mailto:sgpizarro@uc.cl">sgpizarro@uc.cl</a></address>
 	</div><!--/dupla segunda-->
 	<hr />
@@ -244,7 +244,7 @@
 </div><!--/portafolio-->
 
 <footer>
-	<p>Procesos de Producción · segundo semestre · 2017 · sección web</p>
+	<p>Acá termina nuestro portafolio | Bai | 2017 </p>
 	<hr />
 </footer>
 
