--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 	<source src="media/video.mp4" type="video/mp4">
 	<p>Tu navegador no soporta el elemento, actualízate po'.</p> <!-- esta frase se le pone a alguien que no se le abra el video, dejar así o a lo mejor cambiarla por algo parecido-->
 </video> <!--el video se tiene que llamar "video".usar programa mirovideoconverter.com, y transformar el video como webm y mp4 que son los que se usan-->
-<h3>QUIENES SOMOS</h3>
+<h3>QUIÉNES SOMOS</h3>
 <div id="somos"> <!--identidad:somos, es la división de quienes somos, hay clases, una para cada una de nosotras-->
 	<div class="dupla primera">
 		<h4>ISIDORA AMENÁBAR</h4>
@@ -163,7 +163,7 @@
 	<div class="dupla segunda">
 		<h4>SOFÍA PIZARRO</h4>
 		<h5>Un buen diseño puede soportar la moda de 10 años</h5>
-		<p>21 años. Escorpión. Estudiante de Diseño UC, cursando Taller Calidad II.</p>
+		<p>21 años. Sagitario. Estudiante de Diseño UC, cursando Taller Calidad II.</p>
 		<address><a href="mailto:sgpizarro@uc.cl">sgpizarro@uc.cl</a></address>
 	</div><!--/dupla segunda-->
 	<hr />
