imagen url online

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <!-- Schema.org for Google -->
 <meta itemprop="name" content="IAmenábar|SPizarro">
 <meta itemprop="description" content="Portafolio de proyectos UC y otros.">
-<meta itemprop="image" content="cambiar por una URL, deben poner la imagen en línea">
+<meta itemprop="image" content="https://pbs.twimg.com/media/DKiB5zeWsAAFHYP.jpg:large">
 <!-- Twitter -->
 <meta name="twitter:card" content="summary"> <!-- no cambiar este-->
 <meta name="twitter:title" content="IAmenábar|SPizarro">
@@ -20,8 +20,8 @@
 <!-- Open Graph general (Facebook, Pinterest & Google+) -->
 <meta name="og:title" content="IAmenábar|SPizarro">
 <meta name="og:description" content="Portafolio de proyectos UC y otros.">
-<meta name="og:image" content="cambiar por URL">
-<meta name="og:url" content="cambiar">
+<meta name="og:image" content="https://pbs.twimg.com/media/DKiB5zeWsAAFHYP.jpg:large">
+<meta name="og:url" content="https://imamenabar.github.io/amenabar-pizarro/">
 <meta name="og:site_name" content="IAmenábar|SPizarro">
 <meta name="og:locale" content="es_CL">
 <meta name="og:type" content="website">
