--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <title>IAmenábar|SPizarro</title> <!--Ahí se cambia el nombre de la ventana de internet -->
 <!-- Search Engine -->
 <meta name="description" content="Portafolio de proyectos UC y otros."> <!-- solo cambiar lo que dice cambiar-->
-<meta name="image" content="cambiar por una URL, debes poner la imagen en línea">
+<meta name="image" content="https://pbs.twimg.com/media/DKiB5zeWsAAFHYP.jpg:large">
 <!-- Schema.org for Google -->
 <meta itemprop="name" content="IAmenábar|SPizarro">
 <meta itemprop="description" content="Portafolio de proyectos UC y otros.">
