--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <meta name="og:title" content="IAmenábar|SPizarro">
 <meta name="og:description" content="Portafolio de proyectos UC y otros.">
 <meta name="og:image" content="https://pbs.twimg.com/media/DKiB5zeWsAAFHYP.jpg:large">
-<meta name="og:url" content="https://imamenabar.github.io/amenabar-pizarro/">
+<meta name="og:url" content="https://pbs.twimg.com/media/DKiB5zeWsAAFHYP.jpg:large">
 <meta name="og:site_name" content="IAmenábar|SPizarro">
 <meta name="og:locale" content="es_CL">
 <meta name="og:type" content="website">
