--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 <title>IAmenábar|SPizarro</title> <!--Ahí se cambia el nombre de la ventana de internet -->
 <!-- Search Engine -->
 <meta name="description" content="Portafolio de proyectos UC y otros."> <!-- solo cambiar lo que dice cambiar-->
-<meta name="image" content="https://i.pinimg.com/564x/15/66/a1/1566a17c86a4753b6d61d3107ebc47f2.jpg">
+<meta name="image" content="https://68.media.tumblr.com/1566a17c86a4753b6d61d3107ebc47f2/tumblr_owtatnbEfP1s3qlsno1_540.png">
 <!-- Schema.org for Google -->
 <meta itemprop="name" content="IAmenábar|SPizarro">
 <meta itemprop="description" content="Portafolio de proyectos UC y otros.">
-<meta itemprop="image" content="https://i.pinimg.com/564x/15/66/a1/1566a17c86a4753b6d61d3107ebc47f2.jpg">
+<meta itemprop="image" content="https://68.media.tumblr.com/1566a17c86a4753b6d61d3107ebc47f2/tumblr_owtatnbEfP1s3qlsno1_540.png">
 <!-- Twitter -->
 <meta name="twitter:card" content="summary"> <!-- no cambiar este-->
 <meta name="twitter:title" content="IAmenábar|SPizarro">
@@ -20,8 +20,8 @@
 <!-- Open Graph general (Facebook, Pinterest & Google+) -->
 <meta name="og:title" content="IAmenábar|SPizarro">
 <meta name="og:description" content="Portafolio de proyectos UC y otros.">
-<meta name="og:image" content="https://i.pinimg.com/564x/15/66/a1/1566a17c86a4753b6d61d3107ebc47f2.jpg">
-<meta name="og:url" content="https://i.pinimg.com/564x/15/66/a1/1566a17c86a4753b6d61d3107ebc47f2.jpg">
+<meta name="og:image" content="https://68.media.tumblr.com/1566a17c86a4753b6d61d3107ebc47f2/tumblr_owtatnbEfP1s3qlsno1_540.png">
+<meta name="og:url" content="https://68.media.tumblr.com/1566a17c86a4753b6d61d3107ebc47f2/tumblr_owtatnbEfP1s3qlsno1_540.png">
 <meta name="og:site_name" content="IAmenábar|SPizarro">
 <meta name="og:locale" content="es_CL">
 <meta name="og:type" content="website">
